<resources>
    <string name="app_name">Direct Pay</string>
    <string name="action_settings">Settings</string>

    <string name="login">LOGIN</string>
    <string name="next">Next</string>


    <string name="qrscan_button">OK</string>

    <string name="pay_button">Pay</string>
    <string name="price_text">Amount</string>
    <string name="seller_id_text">Merchant Id</string>
    <string name="seller_name_text">Merchant Name</string>
    <string name="seller_address_text">Merchant Address</string>
    <string name="id_edittext">Cargills Foodcity Bambalabitiya</string>


    <string name="transation_message">You transaction was successful</string>
    <string name="title_activity_my_qr">My QRCode</string>

    <string name="signup">SignUp</string>
    <string name="password_hint">Password</string>
    <string name="mobile_hint">Mobile Number</string>
    <string name="nic_hint">Nic Number</string>
    <string name="Account_hint">Account Number</string>
    <string name="retype_password_hint">Retype Password</string>

    //store data
    <string name="access_token">1</string>
    <string name="register">2</string>
    <string name="transaction">3</string>

    //login Screen
    <string name="login_hint">Password</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="forget_password"> <u>Forgot password?</u></string>


</resources>
